--- a/server/package.json
+++ b/server/package.json
@@ -1,8 +1,14 @@
 {
   "dependencies": {
+    "bcrypt": "^5.1.1",
+    "body-parser": "^1.20.2",
     "express": "^4.18.2",
+    "fs": "^0.0.1-security",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.1.0",
     "mysql2": "^3.7.1",
+    "nodemon": "^3.0.3",
+    "path": "^0.12.7",
     "sequelize": "^6.35.2"
   },
   "devDependencies": {
